--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@babel/eslint-parser": "^7.21.8",
     "@popperjs/core": "^2.11.7",
     "@riophae/vue-treeselect": "^0.4.0",
     "axios": "^1.4.0",
@@ -17,8 +16,9 @@
     "compress-json": "^2.1.2",
     "core-js": "^3.30.2",
     "css-filter-converter": "^1.0.109",
-    "css-loader": "^6.7.1",
+    "css-loader": "^5.2.7",
     "dom-to-image": "^2.6.0",
+    "eslint": "^6.8.0",
     "file-loader": "^6.2.0",
     "highcharts": "^11.0.1",
     "highcharts-vue": "^1.4.1",
@@ -40,7 +40,7 @@
     "regression": "^2.0.1",
     "sass": "^1.62.1",
     "sass-loader": "^10.4.1",
-    "style-loader": "^3.3.1",
+    "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "vue": "^2.7.14",
     "vue-carousel": "^0.18.0",
@@ -70,7 +70,6 @@
     "@vue/cli-plugin-babel": "^4.5.19",
     "@vue/cli-plugin-eslint": "^4.5.19",
     "@vue/cli-service": "^4.5.19",
-    "eslint": "^6.8.0",
     "eslint-plugin-vue": "^9.13.0",
     "webpack": "^4.46.0"
   },
@@ -84,7 +83,7 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "@babel/eslint-parser"
+      "parser": "eslint"
     },
     "rules": {}
   },
