--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.7",
     "@riophae/vue-treeselect": "^0.4.0",
+    "@sbmdkl/nepali-date-converter": "^2.0.2",
     "axios": "^1.4.0",
     "bootstrap": "^4.6.2",
     "bootstrap-vue": "^2.23.1",
