--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dom-to-image": "2.6.0",
     "eslint": "6.8.0",
     "file-loader": "6.2.0",
+    "floating-vue": "^1.0.0-beta.19",
     "highcharts": "11.0.1",
     "highcharts-vue": "1.4.1",
     "html2canvas": "1.4.1",
@@ -52,6 +53,7 @@
     "vue-i18n": "8.28.2",
     "vue-json-csv": "1.2.12",
     "vue-loader": "17.1.1",
+    "vue-mention": "^1.0.0-floating-vue1",
     "vue-multiselect": "2.1.6",
     "vue-papa-parse": "3.1.0",
     "vue-router": "3.6.5",
